CustomQuery: init() method changed.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-# spring.main.banner-mode=off
 # ===============================
 # = POSTGRESQL DATABASE
 # ===============================
@@ -8,5 +7,10 @@ spring.datasource.password=WESt1987
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.show-sql=true
+# ===============================
+# = SPRING / FLYWAY
+# ===============================
+spring.flyway.locations=classpath:/sql
